--- a/notes/01.Python_Virtual_Machine.md
+++ b/notes/01.Python_Virtual_Machine.md
@@ -34,3 +34,4 @@ python -m pip install <package names> # python -m pip install requests
 `Better method: python -m pip install requests`  
 `Not good for some packages : pip install requests`
 
+*[Python Standard Libraries](https://docs.python.org/3.6/library/index.html)*
