--- a/notes/01.Python_Virtual_Machine.md
+++ b/notes/01.Python_Virtual_Machine.md
@@ -26,7 +26,8 @@ source <path to pvm bin active > # source /tmp/pvm_test/bin/activate
 #### How to install [packages](https://pypi.org/search/) in PVM
 
 ```bash
-python -m pip install <package names> # python -m pip install requests
+# python -m pip install <package names>==<version optional> 
+python -m pip install requests
 ```
 
 ###### Note: For Python3 version please use interpreter arguments to install packages and please don't use pip arguments
@@ -35,3 +36,9 @@ python -m pip install <package names> # python -m pip install requests
 `Not good for some packages : pip install requests`
 
 *[Python Standard Libraries](https://docs.python.org/3.6/library/index.html)*
+
+##### Install packages from a file
+```bash
+# python -m pip install -r <path to file>
+python -m pip install -r requirements.txt
+```
