--- a/notes/02.Python_IO_Basics.md
+++ b/notes/02.Python_IO_Basics.md
@@ -16,8 +16,8 @@
 file = open("../data/temp.txt", "r")
 
 # Read all lines in a text file
-for l in file.readlines():
-    print(l)
+for row in file.readlines():
+    print(row)
 # Close opened file stream
 file.close()
 ```
