--- a/notes/05.Python_Http_Integration.md
+++ b/notes/05.Python_Http_Integration.md
@@ -8,11 +8,11 @@ Requests allow you to send HTTP/1.1 requests. You can add headers, form data, mu
 ##### How to install requests in Python
 ```bash
 # Python3 virtual environment
-python -m pip isntall requests
+python -m pip install requests
 
 # Host Python3 environment
 # Based on the user permission, please give the permissions to following command
-python3 -m pip isntall requests # ex. for sudo user: sudo python3 -m pip isntall requests 
+python3 -m pip install requests # ex. for sudo user: sudo python3 -m pip isntall requests 
 
 ```
 
